# IBM-1620

./: .gitignore  README.md  glyph.txt  glyph_edit.py  glyphs.py  main.py  requirements.txt  util.py
ald-prod/: convert_to_png.py  glyph_edit.py  glyphs.py  process-2.py  process-3.py  requirements.txt  test_util.py  util.py
ald2/: CMakeLists.txt
ald2/src/: Card.cpp  Card.h  CardMeta.cpp  CardMeta.h  Components.cpp  Components.h  LogicDiagram.cpp  LogicDiagram.h  Machine.cpp  Machine.h  Pin.cpp  Pin.h  PinLocation.cpp  PinMeta.cpp  PinMeta.h  PlugLocation.cpp  PlugLocation.h  Util.cpp  VerilogWire.cpp  VerilogWire.h  main-1.cpp
ald2/src/cards/: CardHIZ.cpp  CardHIZ.h  CardIND.cpp  CardIND.h  CardONE.h  CardRST.cpp  CardRST.h  CardZERO.cpp  CardZERO.h
ald2/tests/: 01.06.01.1.yaml  controls.yaml  dot-or-test-1-controls.yaml  dot-or-test-1-pages.yaml  dot-or-test-1.yaml  main-1.yaml  unit-test-1.cpp
alder/: CMakeLists.txt  README.md
alder-c/: main.py  util.py
alder-c2/: README.md  convert-ald1.py  lark-test.py  logic.lark  logicbox.py  main.py  main2.py  mechanical.logic  net2.py  net3.py  network.py  requirements.txt  schem.py  schem2.py  sim2.lark  sim2.py  test_logicbox.py  test_logicparser.py  test_net3.py  test_schem2.py  test_sim2.py  test_solver.py  util.py
cv1/: deskew.py  gen1.py  main.py  main2.py  main3.py  pdf2png.py  requirements.txt
cv2/: contour.py  deskew.py  glyph-1.py  glyph-2.py  hello.py  normalize-1.py
daves-1f/: main.v  typewriter-mechanical.logic  typewriter-mechanical.v
meta/: ald_001_bw.json  ald_002_bw.json  ald_003_bw.json  ald_004_bw.json  ald_005_bw.json  ald_006_bw.json  ald_007_bw.json  ald_008_bw.json  ald_009_bw.json  ald_010_bw.json  ald_011_bw.json  ald_012_bw.json  ald_013_bw.json  ald_014_bw.json  ald_015_bw.json  ald_016_bw.json  ald_017_bw.json  ald_018_bw.json  ald_019_bw.json  ald_020_bw.json  ald_021_bw.json  ald_022_bw.json  ald_023_bw.json  ald_024_bw.json  ald_025_bw.json  ald_026_bw.json  ald_027_bw.json  ald_028_bw.json  ald_029_bw.json  ald_030_bw.json  ald_031_bw.json  ald_032_bw.json  ald_033_bw.json  ald_034_bw.json  ald_035_bw.json  ald_036_bw.json  ald_037_bw.json  ald_038_bw.json  ald_039_bw.json  ald_040_bw.json  (+413 more)
(+73 files in other folders)
